--- a/example/index.html
+++ b/example/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eva.js Plugin</title>
+    <title>Eva.js Plugin Example</title>
+    <script>
+      var global = window;
+      var globalThis = window;
+    </script>
   </head>
   <body>
     <canvas id="canvas"></canvas>
-    <script src="https://cdn.bootcdn.net/ajax/libs/pixi.js/4.8.7/pixi.min.js"></script>
-    <script src="/bundle.js"></script>
+    <script src="./index.ts" type="module"></script>
   </body>
 </html>
